--- a/GraficadorSeñales/MainWindow.xaml
+++ b/GraficadorSeñales/MainWindow.xaml
@@ -11,13 +11,13 @@
             <RowDefinition Height="127*"/>
             <RowDefinition Height="292*"/>
         </Grid.RowDefinitions>
-        <TextBlock HorizontalAlignment="Left" Margin="47,35,0,0" TextWrapping="Wrap" Text="Señal Senoidal." VerticalAlignment="Top" Height="19" Width="84"/>
-        <TextBlock HorizontalAlignment="Left" Margin="47,54,0,0" TextWrapping="Wrap" Text="Amplitud" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Height="16" Margin="47,75,0,0" TextWrapping="Wrap" Text="Fase" VerticalAlignment="Top" Width="75"/>
-        <TextBlock HorizontalAlignment="Left" Margin="47,99,0,0" TextWrapping="Wrap" Text="Frecuencia" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtAmplitud" HorizontalAlignment="Left" Height="18" Margin="108,52,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtFase" HorizontalAlignment="Left" Height="19" Margin="108,75,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtFrecuencia" HorizontalAlignment="Left" Height="16" Margin="108,99,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBlock HorizontalAlignment="Left" Margin="47,35,0,0" TextWrapping="Wrap" Text="Señal Parabolica" VerticalAlignment="Top" Height="19" Width="95"/>
+        <TextBlock HorizontalAlignment="Left" Margin="47,54,0,0" TextWrapping="Wrap" Text="Amplitud" VerticalAlignment="Top" Visibility="Hidden"/>
+        <TextBlock HorizontalAlignment="Left" Height="16" Margin="47,75,0,0" TextWrapping="Wrap" Text="Fase" VerticalAlignment="Top" Width="75" Visibility="Hidden"/>
+        <TextBlock HorizontalAlignment="Left" Margin="47,99,0,0" TextWrapping="Wrap" Text="Frecuencia" VerticalAlignment="Top" Visibility="Hidden"/>
+        <TextBox x:Name="txtAmplitud" HorizontalAlignment="Left" Height="18" Margin="108,52,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
+        <TextBox x:Name="txtFase" HorizontalAlignment="Left" Height="19" Margin="108,75,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
+        <TextBox x:Name="txtFrecuencia" HorizontalAlignment="Left" Height="16" Margin="108,99,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
         <TextBlock HorizontalAlignment="Left" Margin="259,35,0,0" TextWrapping="Wrap" Text="Tiempo Inicial" VerticalAlignment="Top"/>
         <TextBox x:Name="txtTiempo_Inicial" HorizontalAlignment="Left" Height="19" Margin="248,51,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="259,75,0,0" TextWrapping="Wrap" Text="Tiempo Final" VerticalAlignment="Top"/>
