Trabajando en un Menu a la carta

--- a/GraficadorSeñales/MainWindow.xaml
+++ b/GraficadorSeñales/MainWindow.xaml
@@ -11,19 +11,13 @@
             <RowDefinition Height="127*"/>
             <RowDefinition Height="292*"/>
         </Grid.RowDefinitions>
-        <TextBlock HorizontalAlignment="Left" Margin="47,35,0,0" TextWrapping="Wrap" Text="Señal Parabolica" VerticalAlignment="Top" Height="19" Width="95"/>
-        <TextBlock HorizontalAlignment="Left" Margin="47,54,0,0" TextWrapping="Wrap" Text="Amplitud" VerticalAlignment="Top" Visibility="Hidden"/>
-        <TextBlock HorizontalAlignment="Left" Height="16" Margin="47,75,0,0" TextWrapping="Wrap" Text="Fase" VerticalAlignment="Top" Width="75" Visibility="Hidden"/>
-        <TextBlock HorizontalAlignment="Left" Margin="47,99,0,0" TextWrapping="Wrap" Text="Frecuencia" VerticalAlignment="Top" Visibility="Hidden"/>
-        <TextBox x:Name="txtAmplitud" HorizontalAlignment="Left" Height="18" Margin="108,52,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
-        <TextBox x:Name="txtFase" HorizontalAlignment="Left" Height="19" Margin="108,75,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
-        <TextBox x:Name="txtFrecuencia" HorizontalAlignment="Left" Height="16" Margin="108,99,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Visibility="Hidden"/>
+        <TextBlock HorizontalAlignment="Left" Margin="47,35,0,0" TextWrapping="Wrap" Text="Tipo de señal" VerticalAlignment="Top" Height="19" Width="95"/>
         <TextBlock HorizontalAlignment="Left" Margin="259,35,0,0" TextWrapping="Wrap" Text="Tiempo Inicial" VerticalAlignment="Top"/>
         <TextBox x:Name="txtTiempo_Inicial" HorizontalAlignment="Left" Height="19" Margin="248,51,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="259,75,0,0" TextWrapping="Wrap" Text="Tiempo Final" VerticalAlignment="Top"/>
         <TextBox x:Name="txtTiempo_Final" HorizontalAlignment="Left" Height="16" Margin="248,99,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="123"/>
         <Button x:Name="BtnGraficar" Content="Graficar" HorizontalAlignment="Left" Margin="582,0,0,0" VerticalAlignment="Top" Width="200" Height="107" Click="Graficar_Click"/>
-        <ScrollViewer x:Name="scrGrafica" HorizontalAlignment="Left" Height="272" Margin="248,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="499" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Visible">
+        <ScrollViewer x:Name="scrGrafica" HorizontalAlignment="Left" Height="272" Margin="373,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="374" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Visible">
             <Grid>
                 <Polyline Stroke="CornflowerBlue" StrokeThickness="2" Name="plnGrafica" ></Polyline>
                 <Polyline Stroke="Black" StrokeThickness="1" Name="pnlEjeX"></Polyline>
@@ -32,8 +26,20 @@
         </ScrollViewer>
         <TextBlock HorizontalAlignment="Left" Margin="407,35,0,0" TextWrapping="Wrap" Text="Frecuencia De Muestreo" VerticalAlignment="Top"/>
         <TextBox x:Name="txtFrecuenciaMuestreo" HorizontalAlignment="Left" Height="23" Margin="407,51,0,0" TextWrapping="Wrap" Text="aQUI" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="lblLimiteInferior" HorizontalAlignment="Left" Height="23" Margin="123,259,0,0" Grid.Row="1" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" TextAlignment="Right"/>
-        <TextBox x:Name="lblLimiteSuperior" HorizontalAlignment="Left" Height="24" Margin="123,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" TextAlignment="Right"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="123,133,0,0" Grid.Row="1" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" TextAlignment="Right"/>
+        <TextBox x:Name="lblLimiteInferior" HorizontalAlignment="Left" Height="23" Margin="248,259,0,0" Grid.Row="1" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" TextAlignment="Right"/>
+        <TextBox x:Name="lblLimiteSuperior" HorizontalAlignment="Left" Height="24" Margin="248,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" TextAlignment="Right"/>
+        <TextBox HorizontalAlignment="Left" Height="24" Margin="248,133,0,0" Grid.Row="1" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" TextAlignment="Right"/>
+        <ComboBox x:Name="CbTipoSeñal" HorizontalAlignment="Left" Margin="123,32,0,0" VerticalAlignment="Top" Width="131" BorderBrush="#FFFFA1A1" Foreground="Black" SelectionChanged="CbTipoSeñal_SelectionChanged">
+            <ComboBox.Background>
+                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                    <GradientStop Color="#FFF0F0F0" Offset="0"/>
+                    <GradientStop Color="#FFE83A3A" Offset="1"/>
+                </LinearGradientBrush>
+            </ComboBox.Background>
+            <ComboBoxItem>Señal Parabolica</ComboBoxItem>
+            <ComboBoxItem>Señal Senoidal</ComboBoxItem>
+            <ComboBoxItem></ComboBoxItem>
+        </ComboBox>
+        <Grid x:Name="panelConfiguracion" HorizontalAlignment="Left" Height="125" Margin="30,64,0,0" VerticalAlignment="Top" Width="213" Grid.RowSpan="2"/>
     </Grid>
 </Window>
