Implementando librerias de audio

--- a/GraficadorSeñales/MainWindow.xaml
+++ b/GraficadorSeñales/MainWindow.xaml
@@ -39,6 +39,8 @@
             <ComboBoxItem>Señal Parabolica</ComboBoxItem>
             <ComboBoxItem>Señal Senoidal</ComboBoxItem>
             <ComboBoxItem>Señal Exponencial</ComboBoxItem>
+            <ComboBoxItem>Señal Audiol</ComboBoxItem>
+
         </ComboBox>
         <Grid x:Name="panelConfiguracion" HorizontalAlignment="Left" Height="125" Margin="30,64,0,0" VerticalAlignment="Top" Width="213" Grid.RowSpan="2"/>
     </Grid>
