--- a/GraficadorSeñales/ControlAudio.xaml
+++ b/GraficadorSeñales/ControlAudio.xaml
@@ -9,8 +9,8 @@
     <Grid>
         <Grid  HorizontalAlignment="Left" Height="125" Margin="10,20,0,0" VerticalAlignment="Top" Width="213" Grid.RowSpan="2">
             <TextBlock HorizontalAlignment="Left" Margin="12,12,0,0" TextWrapping="Wrap" Text="Archivo" VerticalAlignment="Top" />
-            <TextBox x:Name="txtRutaArchivo" HorizontalAlignment="Left" Height="18" Margin="57,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="137" />
-            <Button x:Name="btnElegirArchivo" Content="Button" HorizontalAlignment="Center" Margin="10,33,19,72" VerticalAlignment="Center" Width="184"/>
+            <TextBox x:Name="txtRutaArchivo" HorizontalAlignment="Left" Height="18" Margin="57,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="137" />
+            <Button x:Name="btnElegirArchivo" Content="Elegir" HorizontalAlignment="Center" Margin="10,33,19,72" VerticalAlignment="Center" Width="184" Click="BtnElegirArchivo_Click"/>
 
         </Grid>
     </Grid>
