--- a/GraficadorSeñales/ConfiguracionSeñalSenoidal.xaml
+++ b/GraficadorSeñales/ConfiguracionSeñalSenoidal.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:GraficadorSeñales"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid  HorizontalAlignment="Left" Height="125" Margin="10,20,0,0" VerticalAlignment="Top" Width="213" Grid.RowSpan="2">
+    <Grid  HorizontalAlignment="Left" Height="125" Margin="10,-14,0,0" VerticalAlignment="Top" Width="213" Grid.RowSpan="2">
         <TextBlock HorizontalAlignment="Left" Margin="12,12,0,0" TextWrapping="Wrap" Text="Amplitud" VerticalAlignment="Top" />
         <TextBlock HorizontalAlignment="Left" Height="16" Margin="12,33,0,0" TextWrapping="Wrap" Text="Fase" VerticalAlignment="Top" Width="76" />
         <TextBlock HorizontalAlignment="Left" Margin="12,57,0,0" TextWrapping="Wrap" Text="Frecuencia" VerticalAlignment="Top" />
