--- a/GraficadorSeñales/MainWindow.xaml
+++ b/GraficadorSeñales/MainWindow.xaml
@@ -24,6 +24,7 @@
         <ScrollViewer x:Name="scrGrafica" HorizontalAlignment="Left" Height="272" Margin="161,145,0,0" VerticalAlignment="Top" Width="374" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Visible" Grid.ColumnSpan="2">
             <Grid>
                 <Polyline Stroke="CornflowerBlue" StrokeThickness="2" Name="plnGrafica" ></Polyline>
+                <Polyline Stroke="Red" StrokeThickness="2" Name="plnGrafica_2" ></Polyline>
                 <Polyline Stroke="Black" StrokeThickness="1" Name="pnlEjeX"></Polyline>
                 <Polyline Stroke="Black" StrokeThickness="1" Name="pnlEjeY"></Polyline>
             </Grid>
